--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,12 +4,28 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;  
 }
 
+/*HEADINGS*/
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: white;
 
 }
+
+.header-secondary {
+    color: white;
+    font-weight: 300;
+    font-size: 42px;
+}
+
+.header--sub-header {
+    color: gray;
+    font-size: 21px;
+    font-weight: 300;
+
+}
+
+/*LINKS*/
 
 .link--cta {
     font-size: 16px;
