--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,8 +19,8 @@ body {
 }
 
 .header--sub-header {
-    color: gray;
-    font-size: 21px;
+    color: white;
+    font-size: 42px;
     font-weight: 300;
 
 }
